--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dotenv = "0.15.0"
 rand = "0.8.5"
 log = "0.4.17"
 env_logger = "0.9.1"
+lazy_static = "1.4.0"
 
 [dependencies.tokio]
 version = "1.0"
