voice_connect_test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ rand = "0.8.5"
 log = "0.4.17"
 env_logger = "0.9.1"
 lazy_static = "1.4.0"
+songbird = "0.3.0"
 
 [dependencies.tokio]
 version = "1.0"
-features = ["macros", "rt-multi-thread"]
+features = ["macros", "rt-multi-thread", "signal"]
 
 [dependencies.serenity]
 default-features = false
-features = ["builder", "chrono", "client", "gateway", "cache", "http", "model", "utils", "rustls_backend", "collector"]
+features = ["builder", "chrono", "client", "gateway", "cache", "http", "model", "utils", "rustls_backend", "collector", "voice"]
 version = "0.11"
