--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.4.0"
 songbird = "0.3.0"
 lavalink-rs = {git = "https://gitlab.com/vicky5124/lavalink-rs",  branch = "master", features = ["rustls"]}
 regex = "1"
+serde_json = "1"
 
 [dependencies.tokio]
 version = "1.0"
