--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ songbird = { version = "0.3.0", features = ["driver", "serenity", "gateway", "ru
 lavalink-rs = {git = "https://gitlab.com/vicky5124/lavalink-rs",  branch = "master", features = ["rustls"]}
 regex = "1"
 serde_json = "1"
+reqwest = "0.11"
 
 [dependencies.tokio]
 version = "1.0"
